# MarketStdDeviationCalculator

./: .gitignore  CMakeLists.txt  PriceHistoryEndpointCaller.cpp  PriceHistoryEndpointCaller.h  StdDeviationList.cpp  StdDeviationList.h  Ticker.cpp  Ticker.h  apikey.txt  constants.cpp  constants.h  main.cpp  queryparams.txt  readme.md  tickers.txt
curl/libcurl-vc16-x86-debug-static-ipv6-sspi-schannel-obj-curl/: curl.res
pricehistory/: A  AA  AAC  AACE  AACG  AACO  AACP  AACQ  AAIC  AAL  AAMC  AAME  AAN  AAOI  AAON  AAP  AAPL  AAQC  AAT  AAU  AAWW  AB  ABB  ABBV  ABC  ABCB  ABCFF  ABCL  ABCM  ABCO  ABCP  ABEO  ABEV  ABG  ABGI  ABIO  ABM  ABMC  ABMD  ABNB  (+6588 more)
